# Dj-Engine

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  Animation.i  AnimationManager.i  Audio.cpp  Audio.h  Audio.i  CMakeLists.txt  CMakeSettings.json  Compile.md  Dj-Engine  Dj-Engine.cpp  Dj-Engine.i  Dj-Engine.lnk  Dj-Engine.sln  Dj-Engine.vcxproj  Dj-Engine.vcxproj.filters  Dj-engine  Dj-engine.cbp  Dj-engine.depend  Dj-engine.layout  Game.cpp  Game.h  Game.i  GameRender.i  Generator.i  Graphics.i  MenuNavigator.i  MenuNode.i  MenuRender.i  Note.i  Player.i  README.md  Rendr.cpp  Rendr.h  Rendr.i  SongScanner.i  build.sh  (+16 more)
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
header/: Animation.h  AnimationManager.h  Audio.h  DJEUtils.h  Game.h  GameRender.h  Generator.h  Graphics.h  MenuNavigator.h  MenuNode.h  MenuRender.h  Note.h  Player.h  Rendr.h  SongScanner.h  TimerManager.h
include/: Generator.h  Note.h  Player.h  Rendr.h
installer/: Dj-Engine-Installer.msi  Installer.vdproj
lib/GLEW/: glew.pc
lib/IMGUI/: imconfig.h  imgui.cpp  imgui.h  imgui_draw.cpp  imgui_impl_glfw.cpp  imgui_impl_glfw.h  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h  imgui_internal.h  imgui_widgets.cpp  imstb_rectpack.h  imstb_textedit.h  imstb_truetype.h
lib/SimpleINI/: ConvertUTF.c  ConvertUTF.h  SimpleIni.h
lib/glm/cmake/glm/: glmConfig-version.cmake  glmConfig.cmake
lib/glm/glm/: CMakeLists.txt  common.hpp  exponential.hpp  ext.hpp  fwd.hpp  geometric.hpp  glm.hpp  integer.hpp  mat2x2.hpp  mat2x3.hpp  mat2x4.hpp  mat3x2.hpp  mat3x3.hpp  mat3x4.hpp  mat4x2.hpp  mat4x3.hpp  mat4x4.hpp  matrix.hpp  packing.hpp  trigonometric.hpp  vec2.hpp  vec3.hpp  vec4.hpp  vector_relational.hpp
lib/glm/glm/detail/: _features.hpp  _fixes.hpp  _noise.hpp  _swizzle.hpp  _swizzle_func.hpp  _vectorize.hpp  compute_common.hpp  compute_vector_relational.hpp  func_common.inl  func_common_simd.inl  func_exponential.inl  func_exponential_simd.inl  func_geometric.inl  func_geometric_simd.inl  func_integer.inl  func_integer_simd.inl  func_matrix.inl  func_matrix_simd.inl  func_packing.inl  func_packing_simd.inl  func_trigonometric.inl  func_trigonometric_simd.inl  func_vector_relational.inl  glm.cpp  qualifier.hpp  setup.hpp  type_float.hpp  type_half.hpp  type_half.inl  type_mat2x2.hpp  type_mat2x2.inl  type_mat2x3.hpp  type_mat2x3.inl  type_mat2x4.hpp  type_mat2x4.inl  type_mat3x2.hpp  type_mat3x2.inl  type_mat3x3.hpp  type_mat3x3.inl  type_mat3x4.hpp  (+20 more)
lib/glm/glm/ext/: matrix_clip_space.hpp  matrix_clip_space.inl  matrix_common.hpp  matrix_common.inl  matrix_double2x2.hpp  matrix_double2x2_precision.hpp  matrix_double2x3.hpp  matrix_double2x3_precision.hpp  matrix_double2x4.hpp  matrix_double2x4_precision.hpp  matrix_double3x2.hpp  matrix_double3x2_precision.hpp  matrix_double3x3.hpp  matrix_double3x3_precision.hpp  matrix_double3x4.hpp  matrix_double3x4_precision.hpp  matrix_double4x2.hpp  matrix_double4x2_precision.hpp  matrix_double4x3.hpp  matrix_double4x3_precision.hpp  matrix_double4x4.hpp  matrix_double4x4_precision.hpp  matrix_float2x2.hpp  matrix_float2x2_precision.hpp  matrix_float2x3.hpp  matrix_float2x3_precision.hpp  matrix_float2x4.hpp  matrix_float2x4_precision.hpp  matrix_float3x2.hpp  matrix_float3x2_precision.hpp  matrix_float3x3.hpp  matrix_float3x3_precision.hpp  matrix_float3x4.hpp  matrix_float3x4_precision.hpp  matrix_float4x2.hpp  matrix_float4x2_precision.hpp  matrix_float4x3.hpp  matrix_float4x3_precision.hpp  matrix_float4x4.hpp  matrix_float4x4_precision.hpp  (+83 more)
lib/glm/glm/gtc/: bitfield.hpp  bitfield.inl  color_space.hpp  color_space.inl  constants.hpp  constants.inl  epsilon.hpp  epsilon.inl  integer.hpp  integer.inl  matrix_access.hpp  matrix_access.inl  matrix_integer.hpp  matrix_inverse.hpp  matrix_inverse.inl  matrix_transform.hpp  matrix_transform.inl  noise.hpp  noise.inl  packing.hpp  packing.inl  quaternion.hpp  quaternion.inl  random.hpp  random.inl  reciprocal.hpp  reciprocal.inl  round.hpp  round.inl  type_aligned.hpp  type_precision.hpp  type_precision.inl  type_ptr.hpp  type_ptr.inl  ulp.hpp  ulp.inl  vec1.hpp
lib/glm/glm/gtx/: associated_min_max.hpp  associated_min_max.inl  bit.hpp  bit.inl  closest_point.hpp  closest_point.inl  color_encoding.hpp  color_encoding.inl  color_space.hpp  color_space.inl  color_space_YCoCg.hpp  color_space_YCoCg.inl  common.hpp  common.inl  compatibility.hpp  compatibility.inl  component_wise.hpp  component_wise.inl  dual_quaternion.hpp  dual_quaternion.inl  easing.hpp  easing.inl  euler_angles.hpp  euler_angles.inl  extend.hpp  extend.inl  extended_min_max.hpp  extended_min_max.inl  exterior_product.hpp  exterior_product.inl  fast_exponential.hpp  fast_exponential.inl  fast_square_root.hpp  fast_square_root.inl  fast_trigonometry.hpp  fast_trigonometry.inl  float_notmalize.inl  functions.hpp  functions.inl  gradient_paint.hpp  (+84 more)
lib/glm/glm/simd/: common.h  exponential.h  geometric.h  integer.h  matrix.h  neon.h  packing.h  platform.h  trigonometric.h  vector_relational.h
lib/include/freetype/: freetype.h
lib/include/stb/: stb_image.h
lib/ogg/include/ogg/: ogg.h
lib/ogg/win32/VS2015/: libogg.vcxproj
lib/stb/: stb_image.h
res/: chart.fsgmub  chart.txt  desktop.ini  menuVynil.png.license
songs/Baby i'm yours/: info.txt
songs/Watercolor vs Vancouver/: chart.xmk  info.txt
source/: Animation.cpp  AnimationManager.cpp  Audio.cpp  Game.cpp  GameRender.cpp  Generator.cpp  Graphics.cpp  MenuNavigator.cpp  MenuNode.cpp  MenuRender.cpp  Note.cpp  Player.cpp  Rendr.cpp  Rendr.cpp~RFe04b11.TMP  SongScanner.cpp  TimerManager.cpp  main.cpp
src/: Generator.cpp  Note.cpp  Player.cpp  Rendr.cpp
(+4 files in other folders)
